--- a/css/style.css
+++ b/css/style.css
@@ -57,17 +57,17 @@ a:focus, a:hover {
 /*-- //Reset-Code --*/
 /*-- banner --*/
 .w3-banner-top{
-    background: url(../images/ban6666.jpg) no-repeat 0px 0px;
+    background: url(../images/ban3.JPG) no-repeat 0px 0px;
     background-size: cover;
 	min-height:750px;
 	    position: relative;
 }
 .agileinfo-dot{
     background: url(../images/dott.png)repeat 0px 0px;
-    background-size: 2px;
+    background-size: 8px;
     -webkit-background-size: 2px;
-    -moz-background-size: 2px;
-    -o-background-size: 2px;
+    -moz-background-size: 9px;
+    -o-background-size: 9px;
     -ms-background-size: 2px;
 	min-height: 750px;
 }
@@ -102,15 +102,16 @@ ul.address li ul.agileits-address-text li:nth-child(1) {
     padding: 9em 0 0 0;
 }
 .w3-banner-img img {
-    width: 133px;
-    height: 133px;
+    width: 266px;
+    height: 266px;
     border-radius: 50%;
 }
 .w3-right-addres-1 li {
     list-style-type: none;
 }
 .w3-banner-text p {
-    width: 50%;
+    width: 80%;
+    text-align: justify;
 }
 ul.agileits-address-text li a {
     color:rgba(255, 255, 255, 0.76);
@@ -137,7 +138,7 @@ ul.agileits-address-text li a {
     font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 .w3-banner-grid-right p {
-    color:#c5c2c2;
+    color:#fffcfc;
     font-size: 1em;
     line-height: 1.8em;
     letter-spacing: 1px;
@@ -150,7 +151,7 @@ ul.agileits-address-text li span {
   border: 5px solid rgba(238, 238, 238, 0.53);
     width: 400px;
     height: 400px;
-    padding: 63px;
+    padding: 20px;
     margin: 0 auto;
 }
 li.agile-it-adress-left b {
