--- a/css/style.css
+++ b/css/style.css
@@ -1542,7 +1542,8 @@ h4.modal-title {
     font-size: 1.6em;
 	}
 	.w3-edu-info-right2 p {
-    width: 91%;
+    width: 100%;
+    text-align: justify;
 	}
 	.w3-edu-info2 h3 {
     font-size: 1.7em;
@@ -1582,10 +1583,10 @@ h4.modal-title {
     width: 19%;
 	}
 	.w3-edu-grid-left {
-    margin-left: 5em;
+    margin-left: 0.5em;
 	}
 	.w3-edu-grid-right {
-    margin-left: 5em;
+    margin-left: 0.5em;
 	}
 	.jm-item-image {
     width: 200px;
